Breath First Search

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
 
 
 
-    <script type="module" src="./View.js"></script>
-    <script type="module" src="./workers/mainWtest.js" crossorigin></script>
+    <script type="module" src="./app.js"></script>
+    <!-- <script type="module" src="./workers/mainWtest.js" crossorigin></script> -->
     <!-- <script type="module" src="./threads/sort/sel-InsertSort.js"></script> -->
 </body>
 </html>
